# capn-funto

./: Cargo.toml  hello_world.capnp
src/: client.rs  main.rs  server.rs
