[package]
name = "capn-funto"
version = "0.1.0"
authors = ["novenary <streetwalkermc@gmail.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.14.0"

[dependencies]
capnp = "0.14.0"
capnp-rpc = "0.14.0"
futures = "0.3.0"
tokio = { version = "1.2.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.6.0", features = ["compat"] }
